@@ -8,6 +8,9 @@ Log of changes (libticables):
 	- regenerate with Automake 1.11.6.
 	- use LF line endings throughout the sources.
 	- convert README to UTF-8.
+	- fix some spelling errors (or at least, infrequent forms) reported by Lintian (through Albert "alberthro" Huang) and rpmlint (through TC01).
+	- fixes for i18n problems reported by Benjamin Moody.
+	- add the keypresses command to libticables' hex2nsp.
 
 - 14/12/2011, version 1.3.3: debrouxl
 	- more fixes in the libusb 1.0 backend, following the introduction of the asynchronous code.
